Added getting, creating, updating, deleting of tickets and lines
